Place JS/CSS in seperate dirs

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 		Tile placing GUI
 	</title>
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/themes/ui-lightness/jquery-ui.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="css.css" />
+    <link rel="stylesheet" href="CSS/css.css" />
         
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
 	<script src="http://thinkpixellab.com/tilesjs/tiles.js"></script>
-	<script src="start.js"></script>
+	<script src="JS/start.js"></script>
 	</head>
-	<body align=center>
+	<body align=center id='body'>
 		<h1>Select a tile setting</h1>
 		<div id='start-graphical-index0' class="grid_start" onclick="load_case(0)" ><svg id="svg_0"></svg></div>
 	    <div id='start-graphical-index1' class="grid_start" onclick="load_case(1)" ><svg id="svg_1"></svg></div>
