move files to seperate directories
Also tried to fix some problems with opacity

--- a/tileBuilder.html
+++ b/tileBuilder.html
@@ -4,16 +4,14 @@
 	<title>
 		Tile placing GUI
 	</title>
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/themes/ui-lightness/jquery-ui.css" type="text/css" media="all" />
     <link rel="stylesheet" href="CSS/css.css" />
         
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
 	<script src="http://thinkpixellab.com/tilesjs/tiles.js"></script>
 	<script src="JS/core.js"></script>
 	</head>
 	<body align=center>
-		<h1>Index of Configurations of Tile Settings</h1>
+		<h1 id="header">Loading...</h1>
 		<table width="100%">
 			<tr>
 				<td width="25%" id="blockFrame" valign="top">
