--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="http://thinkpixellab.com/tilesjs/tiles.js"></script>
 	<script src="JS/start.js"></script>
+	<script src="JS/helper.js"></script>
 	</head>
 	<body align=center id='body'>
 		<h1>Select a tile setting</h1>
