Remove Tiles.js and impot jQuery locally
Removed a package called Tiles.js and stored jQuery locally such it can
be used offline

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 	</title>
     <link rel="stylesheet" href="CSS/css.css" />
         
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script src="http://thinkpixellab.com/tilesjs/tiles.js"></script>
+	<script src="JS/jquery.min.js"></script>
 	<script src="JS/start.js"></script>
 	<script src="JS/helper.js"></script>
 	</head>
