--- a/tileBuilder.html
+++ b/tileBuilder.html
@@ -6,8 +6,7 @@
 	</title>
     <link rel="stylesheet" href="CSS/css.css" />
         
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script src="http://thinkpixellab.com/tilesjs/tiles.js"></script>
+	<script src="JS/jquery.min.js"></script>
 	<script src="JS/core.js"></script>
 	<script src="JS/helper.js"></script>
 	</head>
@@ -19,7 +18,7 @@
 					<h2>Available blocks:</h2>
 					<svg id="svg_blocks"></svg>
 				</td>
-				<td width="50%" id="mainFrame"><div id='graphical-index' class="grid"></div></td>
+				<td width="50%" id="mainFrame"><svg id='graphical-index' class="grid"></div></td>
 				<td width="25%" id="statFrame" valign="top">
 					<h2>Statistics:</h2>
 					<table>
