Fixed all and facelift
V0.1b nearly finished first version

--- a/tileBuilder.html
+++ b/tileBuilder.html
@@ -18,7 +18,7 @@
 					<h2>Available blocks:</h2>
 					<svg id="svg_blocks"></svg>
 				</td>
-				<td width="50%" id="mainFrame"><svg id='graphical-index' class="grid"></div></td>
+				<td width="50%" id="mainFrame"><svg id='graphical-index' class='grid'></svg></td>
 				<td width="25%" id="statFrame" valign="top">
 					<h2>Statistics:</h2>
 					<table>
