Improved CSS and HTML
Should be final version

--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>
-		Tile placing GUI
-	</title>
-    <link rel="stylesheet" href="CSS/css.css" />
-        
-	<script src="JS/jquery.min.js"></script>
-	<script src="JS/start.js"></script>
-	<script src="JS/helper.js"></script>
+		<title>
+			Discovering Tile Settings - Index
+		</title>
+	    <link rel="stylesheet" href="CSS/css.css" />
+		<script src="JS/jquery.min.js"></script>
+		<script src="JS/start.js"></script>
+		<script src="JS/helper.js"></script>
 	</head>
 	<body align=center id='body'>
-		<h1>Select a tile setting</h1>
-		
+		<h1>Click on a case to load it</h1>
 	</body>
 </html>
