--- a/tileBuilder.html
+++ b/tileBuilder.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>
-		Tile placing GUI
-	</title>
-    <link rel="stylesheet" href="CSS/css.css" />
-        
-	<script src="JS/jquery.min.js"></script>
-	<script src="JS/core.js"></script>
-	<script src="JS/helper.js"></script>
+		<title>
+			Discovering Tile Settings
+		</title>
+	    <link rel="stylesheet" href="CSS/css.css" />
+		<script src="JS/jquery.min.js"></script>
+		<script src="JS/core.js"></script>
+		<script src="JS/helper.js"></script>
 	</head>
 	<body align=center>
 		<h1 id="header">Loading...</h1>
@@ -18,7 +17,9 @@
 					<h2>Available blocks:</h2>
 					<svg id="svg_blocks"></svg>
 				</td>
-				<td width="50%" id="mainFrame"><svg id='graphical-index' class='grid'></svg></td>
+				<td width="50%" id="mainFrame">
+					<svg id='graphical-index' class='grid'></svg>
+				</td>
 				<td width="25%" id="statFrame" valign="top">
 					<h2>Statistics:</h2>
 					<table>
@@ -44,6 +45,14 @@
 							</th>
 							<td id='numSols'>
 								Loading...
+							</td>
+						</tr>
+						<tr> 
+							<th>
+								Possible frames:
+							</th>
+							<td id='posFrames'>
+								Not (yet) supported...
 							</td>
 						</tr>
 						<tr> 
