Add story telling and calculate alternate frames

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 	</head>
 	<body align=center id='body'>
 		<h1>Click on a case to load it</h1>
+		<a onclick="story_telling()">What is this?(Dutch)</a>
 	</body>
 </html>
