--- a/tileBuilder.html
+++ b/tileBuilder.html
@@ -18,7 +18,10 @@
 					<svg id="svg_blocks"></svg>
 				</td>
 				<td width="50%" id="mainFrame">
-					<svg id='graphical-index' class='grid'></svg>
+					<svg id='graphical-index' class='grid'></svg><br>
+					<button onclick="var_solution('-')"><<</button><input type="number" id="ID" min=0 max=100><button onclick="var_solution('+')">>></button><br>
+					<button onclick="load_solution_wrapper()">Display solution</button>
+					<button onclick="load_solution(-1)">Random solution</button>
 				</td>
 				<td width="25%" id="statFrame" valign="top">
 					<h2>Statistics:</h2>
@@ -67,8 +70,5 @@
 				</td>
 			</tr>
 		</table>
-		<button onclick="var_solution('-')"><<</button><input type="number" id="ID" min=0 max=100><button onclick="var_solution('+')">>></button><br>
-		<button onclick="load_solution_wrapper()">Display solution</button>
-		<button onclick="load_solution(-1)">Random solution</button>
 	</body>
 </html>
