Added related solutions, reduced code

--- a/tileBuilder.html
+++ b/tileBuilder.html
@@ -19,7 +19,7 @@
 				</td>
 				<td width="50%" id="mainFrame">
 					<svg id='graphical-index' class='grid'></svg><br>
-					<button onclick="var_solution('-')"><<</button><input type="number" id="ID" min=0 max=100><button onclick="var_solution('+')">>></button><br>
+					<button onclick="var_solution('-')"><<</button><input type="number" id="ID_input" min="0" max="100"><button onclick="var_solution('+')">>></button><br>
 					<button onclick="load_solution_wrapper()">Display solution</button>
 					<button onclick="load_solution(-1)">Random solution</button>
 				</td>
