--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 	</head>
 	<body align=center id='body'>
 		<h1>Click on a case to load it</h1>
-		<a onclick="story_telling()">What is this?(Dutch)</a>
+		<a id="story" style="padding-left:50px;padding-right:50px;border:1px solid white; display: inline-block"onclick="story_telling()">What is this?(Dutch)</a>
 	</body>
 </html>
