--- a/tileBuilder.html
+++ b/tileBuilder.html
@@ -11,6 +11,7 @@
 	</head>
 	<body align=center>
 		<h1 id="header">Loading...</h1>
+		<a id="story_2" style="padding-left:50px;padding-right:50px;border:1px solid white; display: inline-block"onclick="story_telling()">Loading...</a>
 		<table width="100%">
 			<tr>
 				<td width="25%" id="blockFrame" valign="top">
@@ -19,7 +20,7 @@
 				</td>
 				<td width="50%" id="mainFrame">
 					<svg id='graphical-index' class='grid'></svg><br>
-					<button onclick="var_solution('-')"><<</button><input type="number" id="ID_input" min="0" max="100"><button onclick="var_solution('+')">>></button><br>
+					<button onclick="var_solution('-')"><<</button><input type="number" id="ID_input" min="1" max="100"><button onclick="var_solution('+')">>></button><br>
 					<button onclick="load_solution_wrapper()">Display solution</button>
 					<button onclick="load_solution(-1)">Random solution</button>
 				</td>
@@ -55,7 +56,7 @@
 								Possible frames:
 							</th>
 							<td id='posFrames'>
-								Not (yet) supported...
+								Loading...
 							</td>
 						</tr>
 						<tr> 
